fixed contact page spacing issues

--- a/walterroman.css
+++ b/walterroman.css
@@ -737,9 +737,9 @@ Compensated for in #aboutPage.pageVis
 
 	text-align: left;
 
-	margin: 40px 0px 20px 14%;
+	margin: 40px 0px 20px 40px;
 
-	padding-left: 70px;
+	padding-left: 15%;
 
 	color: #666;
 
